--- a/ui/package.json
+++ b/ui/package.json
@@ -34,6 +34,7 @@
             "cmdk": "^1.1.1",
             "embla-carousel-react": "^8.6.0",
             "input-otp": "^1.4.2",
+            "lodash": "^4.17.21",
             "lucide-react": "^0.487.0",
             "next-themes": "^0.4.6",
             "react": "^18.3.1",
@@ -48,6 +49,7 @@
             "vaul": "^1.1.2"
       },
       "devDependencies": {
+            "@types/lodash": "^4.17.20",
             "@types/node": "^20.10.0",
             "@types/react": "^19.2.2",
             "@types/react-dom": "^19.2.1",
