adding vercel.json: vercel.json

--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -1,5 +1,10 @@
 {
     "buildCommand": "npm run build",
-    "outputDirectory": "dist"
-}
+    "outputDirectory": "dist",
+    "rewrites": [
+      { "source": "/auth/login", "destination": "/api/auth/login" },
+      { "source": "/auth/callback", "destination": "/api/auth/callback" },
+      { "source": "/auth/:path*", "destination": "/api/auth/:path*" }
+    ]
+  }
   
