--- a/ui/vercel.json
+++ b/ui/vercel.json
@@ -1,6 +1,5 @@
 {
-    "buildCommand": "npm run build",
-    "outputDirectory": "dist",
+    "buildCommand": "npm run dev",
     "rewrites": [
       { "source": "/auth/login", "destination": "/api/auth/login" },
       { "source": "/auth/callback", "destination": "/api/auth/callback" },
