--- a/ui/package.json
+++ b/ui/package.json
@@ -45,7 +45,8 @@
         "react-dom": "^18.3.1",
         "react-hook-form": "^7.55.0",
         "react-resizable-panels": "^2.1.7",
-        "react-router-dom": "^7.9.4",
+        "react-router": "7.9.4",
+        "react-router-dom": "7.9.4",
         "recharts": "^2.15.2",
         "sonner": "^2.0.3",
         "tailwind-merge": "^2.5.2",
@@ -58,6 +59,9 @@
         "@vitejs/plugin-react-swc": "^3.10.2",
         "typescript": "^5.9.3",
         "vite": "6.3.5"
+      },
+      "optionalDependencies": {
+        "@rollup/rollup-linux-x64-gnu": "^4.22.0"
       },
       "scripts": {
         "dev": "vite",
